--- a/deno.json
+++ b/deno.json
@@ -1,7 +1,7 @@
 {
   "importMap": "./import_map.json",
   "tasks": {
-    "dev": "deno run -A --node-modules-dir npm:vite",
+    "dev": "rm -f ./deno.lock && deno run -A --node-modules-dir src/server.ts",
     "build": "deno run -A --node-modules-dir npm:vite build",
     "preview": "deno run -A --node-modules-dir npm:vite preview",
     "serve": "deno run --allow-net --allow-read https://deno.land/std@0.157.0/http/file_server.ts dist/"
