--- a/deno.json
+++ b/deno.json
@@ -2,7 +2,9 @@
   "importMap": "./import_map.json",
   "tasks": {
     "dev": "rm -f ./deno.lock && deno run -A --node-modules-dir src/server.ts",
-    "build": "deno run -A --node-modules-dir npm:vite build",
+    "build": "deno task build:client && deno task build:server",
+    "build:client": "rm -f ./deno.lock && deno run -A --node-modules-dir npm:vite build --outDir dist/client --ssrManifest",
+    "build:server": "rm -f ./deno.lock && deno run -A --node-modules-dir npm:vite build --outDir dist/server --ssr src/entry-server.ts",
     "preview": "deno run -A --node-modules-dir npm:vite preview",
     "serve": "deno run --allow-net --allow-read https://deno.land/std@0.157.0/http/file_server.ts dist/"
   }
