--- a/deno.json
+++ b/deno.json
@@ -6,8 +6,11 @@
     "vue": "npm:vue@^3.3.4",
     "vue/server-renderer": "npm:vue@^3.3.4/server-renderer",
     "vue-router": "npm:vue-router@4",
-    "vuetify": "npm:vuetify@^3.3.5",
-    "vuetify/styles": "npm:vuetify@^3.3.5/styles",
+    "vuetify": "npm:vuetify@^3.3.6",
+    "vuetify/styles": "npm:vuetify@^3.3.6/styles",
+    "vuetify/iconsets/mdi": "npm:vuetify@^3.3.6/iconsets/mdi",
+    "@mdi/font": "npm:@mdi/font@^7.2.96",
+    "@mdi/font/css/materialdesignicons.css": "npm:@mdi/font@^7.2.96/css/materialdesignicons.css",
     "express": "npm:express@^4.18.2",
     "compression": "npm:compression@^1.7.4",
     "serve-static": "npm:serve-static@^1.15.0"
