--- a/deno.json
+++ b/deno.json
@@ -11,15 +11,16 @@
     "vuetify/iconsets/mdi": "npm:vuetify@^3.3.6/iconsets/mdi",
     "express": "npm:express@^4.18.2",
     "compression": "npm:compression@^1.7.4",
-    "serve-static": "npm:serve-static@^1.15.0"
+    "serve-static": "npm:serve-static@^1.15.0",
+    "nats": "npm:nats@^2.15.1"
   },
   "tasks": {
     "dev": "rm -f ./deno.lock && deno run -A --node-modules-dir src/server.ts",    
     "build": "deno task build:client && deno task build:server && deno task build:express",
     "build:client": "rm -f ./deno.lock && deno run -A --node-modules-dir npm:vite build --outDir dist/client --ssrManifest",
     "build:server": "rm -f ./deno.lock && deno run -A --node-modules-dir npm:vite build --outDir dist/server --ssr src/entry-server.ts",
-    "build:express": "rm -f ./deno.lock && deno cache --node-modules-dir ./src/server.ts && cp ./src/server.ts ./dist",
+    "build:express": "rm -f ./deno.lock && deno cache ./src/server.ts",
     "preview": "deno run -A --node-modules-dir npm:vite preview",
-    "serve": "rm -f ./deno.lock && deno run --allow-net --allow-read --allow-write --allow-env --allow-run --node-modules-dir dist/server.ts"
+    "serve": "rm -f ./deno.lock && deno run --allow-net --allow-read --allow-write --allow-env --allow-run --node-modules-dir src/server.ts"
   }
 }
